<resources>
    <string name="app_name">Movies App</string>
    <string name="intro_title">Movies Center</string>
    <string name="intro_description">Watch Premium Hundreds of Tv Shows And Movie are Waiting for you right on the phone</string>
    <string name="get_started">Get Started</string>
    <string name="banner_intro_movies">Banner Intro Movies</string>
    <string name="profile_image">Profile Image</string>
    <string name="sayuti">Sayuti</string>
    <string name="email">sayuti@gmail.com</string>
    <string name="search_movies">Search Movies</string>
    <string name="see_all">See all</string>
    <string name="top_movies">Top Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="explorer">Explorer</string>
    <string name="favorite">Favorite</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="year">Year</string>
    <string name="age">Age</string>
    <string name="hour">Hour</string>
    <string name="genre">Genre</string>
    <string name="name">Name</string>
    <string name="banner_image_slider">Banner Image Slider</string>
    <string name="title">Title</string>
    <string name="_2024_2h_2m">2024 – 2h 2m</string>
    <string name="imdb">IMDB</string>
    <string name="summary">Summary</string>
    <string name="test">Test</string>
    <string name="cast">Cast</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="movie_times">%1$d - %2$s</string>
    <string name="imdb_rating">IMDB %1$d</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_film">Image Film</string>
    <string name="image_back_button">Image back button</string>
    <string name="image_favorite">Image favorite</string>
    <string name="image_share">Image share</string>
    <string name="title_film">Title Film</string>
    <string name="overview">Overview</string>
    <string name="something_wrong">Oops.. something went wrong</string>
    <string name="no_data">Empty data</string>

</resources>